--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,16 @@ dist
 
 # TernJS port file
 .tern-port
+
+**/.terraform/*
+# .tfstate files
+*.tfstate
+*.tfstate.*
+crash.log
+*.tfvars
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.DS_Store
+*.zip
